# first_prac_CUDA

./: CMakeLists.txt  README.md  compare.cpp  jac3d_cpu.cpp  jac3d_gpu.cu  makefile
